updated PR #11